# protocol-magic

contracts/src/: Fibonacci.sol  PirateCouncil.sol
contracts/test/: Fibonacci.t.sol  PirateCouncil.t.sol
precompiles/: .gitignore  Cargo.toml  _precompile_template.rs
precompiles/src/: fibonacci.rs  lib.rs  png_chart.rs
precompiles/src/png_chart_utils/: mod.rs
webserver/: .env.example  package-lock.json  package.json
webserver/src/app/: layout.tsx  page.tsx
webserver/src/app/charter/: page.tsx
webserver/src/app/ledger/: page.tsx
